Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_dfa_2_altergo.txt
[kernel] Parsing dfa_2_rte.c (with preprocessing)
[kernel] dfa_2_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing dfa_2.c (with preprocessing)
  3     [rte:annot] annotating function dfa
[kernel] Frama-C aborted: invalid user input.
